docs/1.x/startup/index.md
---
layout: docpage
title: Startup scripts
parent: Documentation
toc: true
toc_numerate: true
toc_exclude: h1, h3, h4, h5, h6
previous_page: ../applications
next_page: ../shell
---

COHORTE system is composed of several Nodes. Only one node is specified to be Top Composer. It manages the components distribution among the available participating nodes.

In this chapter, we will detail how to create and start COHORTE nodes using simple command lines.


## Creating nodes


To create COHORTE node, you have to use the provided `cohorte-create-node` command.

<div class="note">
<span class="note-title">Note</span>
<p class="note-content">
Ensure to have installed COHORTE on your system and that the COHORTE_HOME environment variable is set to the installation path of COHORTE (see <a href="{{ site.baseurl }}/docs/1.x/setup">setup guide</a>).
</p>
</div>

### Usage

{% highlight bash %}
$ ./cohorte-create-node [-h] [-n NODE_NAME] [-a APP_NAME]
{% endhighlight %}


### Options

This command has the following options :

<pre>
  -h, --help            show this help message and exit

  -n NODE_NAME, --name NODE_NAME
                        Name of the node
  -a APP_NAME, --app-name APP_NAME
                        application's symbolic name
</pre>                      

### Results

This command will create a directory containing the following structure:

![Cohorte node directory structure](cohorte-node-directory-structure.png)

* *node_name* correspond to the provided name by the user using the `--node` option.
* *run* is the starting script. It will be detail in the next section (Starting nodes)
* *repo* is a directory where user provided bundles should be placed.
* *conf* is a directory containing configuration files. Only one configuration file is created initially (autorun_conf.js), other files are generated by `run` script in this location.

Here is the content of the generated `conf/autorun_conf.js`file. You should add component descriptions on the indicated zone.

{% highlight json %}
{ 
  "name": "default-application",
  "root": {
    "name": "default-application-composition",
    "components": [
      /* your component descriptions here */
    ]
  }
}
{% endhighlight %}

Only the node started as Top Composer (see next section) should have this configuration file completed. Other nodes started as simple nodes will ignore this file.


## Starting nodes


To start a COHORTE node, you have to use the generated `run` command (this command calls `cohorte-start-node` internal command).

### Usage
{% highlight bash %}
$ ./run [-h] [-a APPLICATION_ID]
        [--use-config CONFIG_FILE] [--update-config]
        [--show-config] [-b BASE_ABSOLUTE_PATH]
        [-n NODE_NAME] [--top-composer IS_TOP_COMPOSER]
        [--composition-file COMPOSITION_FILE]
        [--auto-start AUTO_START]
        [--web-admin WEB_ADMIN_PORT]
        [--shell-admin SHELL_ADMIN_PORT]
        [--transport TRANSPORT_MODES]
        [--xmpp-server XMPP_SERVER]
        [--xmpp-port XMPP_PORT] [--xmpp-jid XMPP_JID]
        [--xmpp-password XMPP_PASSWORD]
{% endhighlight %}

### Options

There are different kind of options depending on the use of the actual node.

#### Mandatory options

<pre>
  -a APPLICATION_ID, --app-id APPLICATION_ID
                        Application's ID
</pre>                      

All the nodes participating for a given application should have the same `application-id`. 

#### Startup configuration options

<pre>
  --use-config CONFIG_FILE  Configuration file to use for starting cohorte node.
                        By default the run.js file is used if available
  --update-config       Update startup configuration file with provided
                        options
  --show-config         Show startup configuration file content
  -b BASE_ABSOLUTE_PATH, --base BASE_ABSOLUTE_PATH
                        absolute file path of the node's directory
</pre>

We can write the startup configurations in a separate JSON file (see How to use startup configuration files section). This options will simplify the command options list and allows sharing the same startup configurations between several nodes.

#### Information about the node to start

<pre>
  -n NODE_NAME, --node NODE_NAME
                        Node name
  --top-composer IS_TOP_COMPOSER
                        Flag indicating that this node is a Top Composer
  --composition-file COMPOSITION_FILE
                        Composition file (by default 'composition.js'). All
                        composition files should be placed on 'conf' directory
  --auto-start AUTO_START
                        Auto-start the composition if this node is a Top
                        Composer
  --web-admin WEB_ADMIN_PORT
                        Node web admin port
  --shell-admin SHELL_ADMIN_PORT
                        Node remote shell port
</pre>

We can provide a different node name than the already provided when the node is created (by using --node option). One important option of cohorte nodes is the `--top-composer`. If set, the node will be considered as a **Top Composer** (manages all the distribution of components among the available nodes). Users can also provide customised informations such as the http port to use for the *web-admin* component (see [monitoring chapter]({{ site.baseurl }}/docs/1.x/monitoring)), or the port to use for the remote shell admin component. 

####  Information about the transport protocols to use
<pre>
  --transport TRANSPORT_MODES
                        Transport mode (http and/or xmpp - seperated by comma)
  --xmpp-server XMPP_SERVER
                        XMPP server
  --xmpp-port XMPP_PORT
                        XMPP server port
  --xmpp-jid XMPP_JID   XMPP jid
  --xmpp-password XMPP_PASSWORD
                        XMPP Room
</pre>

The `--transport` option allow the use to choose which transport protocol to use between the actual node and the other nodes participating in the same application. You can provide a common seperated list of the supported protocols (`http` and `xmpp` for the moment). Each protocol need additional configuration options that should be provided seperataly using dedicated options (--xmpp-server for instance to mention the XMPP server to use).

### How to use startup configuration files

To avoid re-typing the same options each time a node is started, or to share the same configuration between several nodes, you can provide a *startup configuration file* which contains such startup configurations. The content of such file is described hereafter. 

> run.js

{% highlight json %}
{	
	"application-id": "ABCDEF",

	"node": {		
		"name": "node-rasp",
		"top-composer": true,
		"web-admin": 9001,
		"shell-admin": 9001		
	},
	"transport": ["xmpp"],
	"transport-xmpp": {
		"xmpp-server": "charmanson.isandlatech.com",
		"xmpp-port": 5222,
		"xmpp-jid": "bot@charmanson.isandlatech.com"
	}
}
{% endhighlight %}

* To show the content of the startup configuration file :

{% highlight bash %}
$ ./run --show-config 
{% endhighlight %}

* To use other configuration file than the default *run.js* file :

{% highlight bash %}
$ ./run --use-config other_run_conf.js
{% endhighlight %}

* Update the startup configuration using command options (--some-configuration should be replaced with a supported options list):

{% highlight bash %}
$ ./run --update-config --some-configurations 
{% endhighlight %}

This will update all the provided options within the startup configuration file (run.js). 

### Other advanced startup configurations

The following configuration files (located on `$COHORTE_HOME/conf` folder) are used by COHORTE for the initial configuration of the different internal components. You can override them by creating a file with the same name in your `$COHORTE_BASE/conf` folder.

> Boot configuration files

<table class="table table-striped table-bordered table-hover table-condensed">
	<thead>
	<tr>
		<th> File               </th><th> Bundles &amp; Components  </th>
	</tr>
	</thead>
	<tbody><tr>
		<td> <a href src="#">boot-common.js</a>        </td><td> Pelix, iPOPO, Shell </td>
	</tr>
	<tr>
		<td> <a href src="#">boot-common-py.js</a>     </td><td> Pelix Remote Services, Cohorte Signals </td>
	</tr>
	</tbody>
	</table>

> Python Isolates configuration files

<table class="table table-striped table-bordered table-hover table-condensed">
	<thead>	
	<tr>
		<th> File               </th><th> Bundles &amp; Components  </th>
	</tr>
	</thead>
	<tbody>
	<tr>
		<td> <a href src="#">python-common-http.js</a> </td><td> HTTP Server </td>
	</tr>
	</tbody>
	</table>

> Java Isolates configuration files

<table class="table table-striped table-bordered table-hover table-condensed">
	<thead>	
	<tr>
		<th> File               </th><th> Bundles &amp; Components  </th>
	</tr>
	</thead>
	<tbody>
	<tr>
		<td> <a href src="#">java-common.js</a>        </td><td> iPOJO, Shell, Cohorte PyBoot, Isolate Base &amp; Utilities </td>
	</tr>
	<tr>
		<td> <a href src="#">java-common-http.js</a>   </td><td> HTTP Server </td>
	</tr>
	<tr>
		<td> <a href src="#">java-common-remote.js</a> </td><td> Cohorte Remote Services </td>
	</tr>	
	<tr>
		<td> <a href src="#">java-common-ui.js</a>     </td><td> Cohorte UI Admin </td>
	</tr>
</tbody></table>
